--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pulseaudio
-url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-14.2.tar.xz
+url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-16.1.tar.xz
 archives = 
 giturl = https://github.com/pulseaudio/pulseaudio.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
