--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,12 +1,3 @@
-option('daemon',
-       type : 'boolean', value : true,
-       description : 'Enable building and installation of pulseaudio daemon and supporting configuration files')
-option('client',
-       type : 'boolean', value : true,
-       description : 'Build and install pulseaudio client libraries and utilities')
-option('doxygen',
-       type : 'boolean', value : true,
-       description : 'Enable building and installation of documentation generated with doxygen')
 option('gcov',
        type : 'boolean', value : false,
        description : 'Enable optional gcov coverage analysis')
@@ -88,11 +79,8 @@ option('avahi',
        type : 'feature', value : 'auto',
        description : 'Optional Avahi support')
 option('bluez5',
-       type : 'feature', value : 'auto',
+       type : 'boolean', value : 'true',
        description : 'Optional BlueZ 5 support')
-option('bluez5-gstreamer',
-       type : 'feature', value: 'auto',
-       description : 'Optional BlueZ 5 GStreamer support')
 option('bluez5-native-headset',
        type : 'boolean',
        description : 'Optional native headset backend support (BlueZ 5)')
@@ -102,9 +90,6 @@ option('bluez5-ofono-headset',
 option('dbus',
        type : 'feature', value : 'auto',
        description : 'Optional D-Bus support')
-option('elogind',
-       type : 'feature', value : 'auto',
-       description : 'Optional elogind support')
 option('fftw',
        type : 'feature', value : 'auto',
        description : 'Optional FFTW support')
@@ -115,7 +100,7 @@ option('gsettings',
        type : 'feature', value : 'auto',
        description : 'Optional GSettings support')
 option('gstreamer',
-       type : 'feature', value : 'auto',
+       type : 'feature', value : 'disabled',
        description : 'Optional GStreamer dependency for media-related functionality')
 option('gtk',
        type : 'feature', value : 'auto',
@@ -138,9 +123,6 @@ option('openssl',
 option('orc',
        type : 'feature', value : 'auto',
        description : 'Optimized Inner Loop Runtime Compiler')
-option('oss-output',
-       type : 'feature', value : 'auto',
-       description : 'Optional OSS output support')
 option('samplerate',
        type : 'feature', value : 'disabled',
        description : 'Optional libsamplerate support (DEPRECATED)')
@@ -153,21 +135,12 @@ option('speex',
 option('systemd',
        type : 'feature', value : 'auto',
        description : 'Optional systemd support')
-option('tcpwrap',
-       type : 'feature', value : 'auto',
-       description : 'Optional TCP wrappers support')
 option('udev',
        type : 'feature', value : 'auto',
        description : 'Optional udev support')
-option('valgrind',
-       type : 'feature', value : 'auto',
-       description : 'Optional Valgrind support')
 option('x11',
        type : 'feature', value : 'auto',
        description : 'Optional X11 support')
-option('enable-smoother-2',
-       type : 'boolean', value : 'true',
-       description : 'Use alternative time smoother implementation')
 
 # Echo cancellation
 
