--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pulseaudio
-url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-16.1.tar.xz
+url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-14.2.tar.xz
 archives = 
 giturl = https://github.com/pulseaudio/pulseaudio.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -27,6 +29,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = true
 # set flags to smallest -02 flags possible
